changed exception/problem handling